# decoyrail

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  build.rs
.github/workflows/: ci.yml  deploy-site.yml  release.yml
docs/: README.md  audit-and-metering.md  dlp.md  getting-started.md  how-it-works.md  license.md  policy.md  stats.md  threat-model.md  vault-and-bindings.md
docs/demos/: auto-decoy.tape  model-route.tape  policy-sign.tape  soft-landing.tape  spend-tripwire.tape  tripwire.tape  waste-report.tape
examples/: echo_upstream.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: dlp_detect.rs  proxy_surface.rs  swap_roundtrip.rs  usage_parse.rs
fuzz/seeds/dlp_detect/: seed-hits
fuzz/seeds/proxy_surface/: seed-body  seed-connect
fuzz/seeds/swap_roundtrip/: seed-body
fuzz/seeds/usage_parse/: seed-sse
scripts/: check-prose.sh  diff-cover.sh  e2e.sh  fuzz-smoke.sh  render-demos.sh
site/: build.mjs  package-lock.json  package.json  smoke.mjs
site/assets/: style.css
src/: audit.rs  ca.rs  cache.rs  config.rs  detect.rs  engine.rs  guard.rs  integrity.rs  keyring.rs  lib.rs  license.rs  main.rs  meter.rs  policy.rs  policy_edit.rs  pricing.rs  proxy.rs  softland.rs  stats.rs  swap.rs  util.rs  vault.rs  waste.rs  watch.rs
tests/: proxy_integration.rs  route_integration.rs  softland_integration.rs  tripwire_spend_integration.rs
