[package]
name = "decoyrail-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
base64 = "0.22"
serde_json = "1"

[dependencies.decoyrail]
path = ".."

[[bin]]
name = "swap_roundtrip"
path = "fuzz_targets/swap_roundtrip.rs"
test = false
doc = false
bench = false

[[bin]]
name = "dlp_detect"
path = "fuzz_targets/dlp_detect.rs"
test = false
doc = false
bench = false

[[bin]]
name = "usage_parse"
path = "fuzz_targets/usage_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "proxy_surface"
path = "fuzz_targets/proxy_surface.rs"
test = false
doc = false
bench = false
